--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,18 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
 
@@ -33,8 +43,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>trabalhobd.biblioteca.Biblioteca</exec.mainClass>
     </properties>
 </project>
